--- a/Assets/Style.css
+++ b/Assets/Style.css
@@ -14,7 +14,7 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .jumbotron{
-    background-image: url("/Users/mac/Trivia-Game/Assets/Images/bgPartypic.jpg");
+    background-image: url("./Images/bgPartypic.jpg");
 color: white;
 font-weight: bold;
 font-size: 300%;
@@ -24,7 +24,3 @@ font-size: 300%;
 font-size: 20px;
 }
 
-.photos{
-    background-image: url ("/Users/mac/Trivia-Game/Assets/Images/20090824140403_21Paid_in_Full_pdgwms.jpeg","/Users/mac/Trivia-Game/Assets/Images/camMoney.gif", "/Users/mac/Trivia-Game/Assets/Images/a18059f7ee54bccf301b17e8662eb540.jpg");
-    
-}
